--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "css-loader": "^6.7.1",
+    "firebase": "^9.9.1",
     "jquery": "^3.6.0",
     "postcss-loader": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "source-map-loader": "^4.0.0",
     "web-vitals": "^2.1.4"
